Dashboard Text Enhancements (#3778)
Dashboard text enhancements

--- a/exposed-panels/axigen-webadmin.yaml
+++ b/exposed-panels/axigen-webadmin.yaml
@@ -4,8 +4,11 @@ info:
   name: Axigen Web Admin
   author: dhiyaneshDk
   severity: info
+  description: This template determines if Axigen Web Admin is running.
+  reference:
+    - https://www.axigen.com/
   metadata:
-    shodan-query: 'http.title:"Axigen&nbsp;WebAdmin"'
+    shodan-query: 'http.title:"Axigen WebAdmin"'
   tags: axigen,panel
 
 requests:
@@ -17,8 +20,10 @@ requests:
     matchers:
       - type: word
         words:
-          - '<title>Axigen&nbsp;WebAdmin</title>'
+          - '<title>Axigen WebAdmin</title>'
 
       - type: status
         status:
           - 200
+
+# Enhanced by cs on 2022/02/25
