--- a/exposed-panels/axigen-webmail.yaml
+++ b/exposed-panels/axigen-webmail.yaml
@@ -4,6 +4,9 @@ info:
   name: Axigen WebMail
   author: dhiyaneshDk
   severity: info
+  description: This template determines if Axigen Webmail is running.
+  reference:
+    - https://www.axigen.com/
   metadata:
     shodan-query: 'http.title:"Axigen WebMail"'
   tags: axigen,panel
@@ -22,3 +25,5 @@ requests:
       - type: status
         status:
           - 200
+
+# Enhanced by cs on 2022/02/25
