Update and rename snipe-it-detect.yaml to snipeit-panel.yaml

--- a/technologies/snipeit-panel.yaml
+++ b/technologies/snipeit-panel.yaml
@@ -1,12 +1,12 @@
-id: snipe-it-detect
+id: snipeit-panel
 
 info:
-  name: Snipe-IT Detect
+  name: Snipe-IT Panel Detect
   author: pikpikcu
   severity: info
   metadata:
-    fofa-query: http.title:"Snipe-IT Asset Management"
-  tags: tech,snipe
+    shodan-query: http.favicon.hash:431627549
+  tags: panel,snipeit
 
 requests:
   - method: GET
@@ -18,7 +18,7 @@ requests:
       - type: word
         part: body
         words:
-          - "<title>Snipe-IT Asset Management</title>"
+          - "window.snipeit"
 
       - type: status
         status:
