--- a/cnvd/2021/CNVD-2021-15824.yaml
+++ b/cnvd/2021/CNVD-2021-15824.yaml
@@ -4,8 +4,10 @@ info:
   name: EmpireCMS DOM Cross Site-Scripting
   author: daffainfo
   severity: medium
-  reference: https://www.bilibili.com/read/cv10441910
-  tags: empirecms,cnvd,cnvd2021
+  reference:
+    - https://www.bilibili.com/read/cv10441910
+    - https://vul.wangan.com/a/CNVD-2021-15824
+  tags: empirecms,cnvd,cnvd2021,xss,domxss
 
 requests:
   - method: GET
@@ -17,8 +19,8 @@ requests:
       - type: word
         part: body
         words:
-          - '注:支持鼠标滚轮放大'
-          - 'Request("url")'
+          - 'if(Request("url")!=0)'
+          - 'href=\""+Request("url")+"\"'
         condition: and
 
       - type: status
