--- a/exposed-panels/homematic-panel.yaml
+++ b/exposed-panels/homematic-panel.yaml
@@ -6,7 +6,7 @@ info:
   severity: info
   metadata:
     shodan-query: http.html:"Homematic"
-  tags: panel,homematic
+  tags: panel,homematic,iot
 
 requests:
   - method: GET
