--- a/exposed-panels/raspberrymatic-panel.yaml
+++ b/exposed-panels/raspberrymatic-panel.yaml
@@ -6,7 +6,7 @@ info:
   severity: info
   metadata:
     shodan-query: http.favicon.hash:-578216669
-  tags: panel,raspberrymatic
+  tags: panel,raspberrymatic,iot
 
 requests:
   - method: GET
