--- a/technologies/fingerprinthub-web-fingerprints.yaml
+++ b/technologies/fingerprinthub-web-fingerprints.yaml
@@ -7606,6 +7606,11 @@ requests:
           - var reachclientproductname = "skype for business web 应用"
 
       - type: word
+        name: microweber
+        words:
+          - Website Builder</a> <span>by</span> <a href="https://microweber.org" target="_blank" title="Microweber CMS">Microweber</a></span></p>
+
+      - type: word
         name: mihalism-multi-host
         words:
           - http://www.mihalism.com/product/mmh/">mihalism multi host
