--- a/exposures/tokens/digitalocean/axiom-digitalocean-key-exposure.yaml
+++ b/exposures/tokens/digitalocean/axiom-digitalocean-key-exposure.yaml
@@ -1,12 +1,15 @@
 id: axiom-digitalocean-key-exposure
 
 info:
-  name: DigitalOcean key exposure via Axiom
+  name: DigitalOcean Key Exposure via Axiom
   author: geeknik
   severity: critical
-  description: Axiom is a dynamic infrastructure framework to efficiently work with multi-cloud environments, build and deploy repeatable infrastructure focussed on offensive and defensive security.
+  description: Axiom is a dynamic infrastructure framework to efficiently work with multi-cloud environments.
+  remediation: Restrict access to the do.json file or upgrade to a newer version of Axiom
   reference: https://github.com/pry0cc/axiom
   tags: axiom,digitalocean,key,exposure
+  metrics:
+    cvss-score: CVSS:3.0/AV:N/AC:L/PR:N/UI:N/S:U/C:H/I:H/A:H
 
 requests:
   - method: GET
@@ -31,3 +34,5 @@ requests:
         part: body
         regex:
           - '\"do_key\"\: .*'
+
+# Enhanced by cs on 2022/02/28
