--- a/vulnerabilities/wordpress/easy-wp-smtp-listing.yaml
+++ b/vulnerabilities/wordpress/easy-wp-smtp-listing.yaml
@@ -4,9 +4,12 @@ info:
   name: SMTP WP Plugin Directory listing enabled
   author: PR3R00T
   severity: high
-  description: The WordPress Easy WP SMTP Plugin has its 'easy-wp-smtp' folder remotely acccessible and its content available for access.
+  description: The WordPress Easy WP SMTP Plugin has its 'easy-wp-smtp' folder remotely accessible and its content available for access.
+  remediation: Upgrade to version 1.4.3 or newer and consider disabling debug logs.
   reference: https://blog.nintechnet.com/wordpress-easy-wp-smtp-plugin-fixed-zero-day-vulnerability/
   tags: wordpress,wp-plugin,smtp
+  cvss-metrics:
+    cve-id: CVE-2020-35234
 
 requests:
   - method: GET
@@ -19,3 +22,5 @@ requests:
           - "log"
           - "Index of"
         condition: and
+
+# Enhanced by cs on 2022/02/28
