--- a/vulnerabilities/wordpress/easy-wp-smtp-listing.yaml
+++ b/vulnerabilities/wordpress/easy-wp-smtp-listing.yaml
@@ -15,6 +15,8 @@ requests:
   - method: GET
     path:
       - "{{BaseURL}}/wp-content/plugins/easy-wp-smtp/"
+      - "{{BaseURL}}/wp-content/plugins/wp-mail-smtp-pro/"
+
     matchers:
       - type: word
         words:
