--- a/vulnerabilities/wordpress/easy-wp-smtp-listing.yaml
+++ b/vulnerabilities/wordpress/easy-wp-smtp-listing.yaml
@@ -1,10 +1,10 @@
 id: easy-wp-smtp-listing
 
 info:
-  name: SMTP WP Plugin Directory listing enabled
+  name: SMTP WP Plugin Directory Listing
   author: PR3R00T
   severity: high
-  description: The WordPress Easy WP SMTP Plugin has its 'easy-wp-smtp' folder remotely accessible and its content available for access.
+  description: The WordPress Easy WP SMTP Plugin has its log folder remotely accessible and its content available for access.
   remediation: Upgrade to version 1.4.3 or newer and consider disabling debug logs.
   reference: https://blog.nintechnet.com/wordpress-easy-wp-smtp-plugin-fixed-zero-day-vulnerability/
   tags: wordpress,wp-plugin,smtp
