--- a/cnvd/2022/CNVD-2022-03672.yaml
+++ b/cnvd/2022/CNVD-2022-03672.yaml
@@ -5,11 +5,11 @@ info:
   author: daffainfo
   severity: critical
   reference:
-    - https://www.cnvd.org.cn/flaw/show/CNVD-2022-10270
-    - https://www.cnvd.org.cn/flaw/show/CNVD-2022-03672
     - https://www.1024sou.com/article/741374.html
     - https://copyfuture.com/blogs-details/202202192249158884
-  tags: cnvd,cnvd2020,sunflower
+    - https://www.cnvd.org.cn/flaw/show/CNVD-2022-10270
+    - https://www.cnvd.org.cn/flaw/show/CNVD-2022-03672
+  tags: cnvd,cnvd2020,sunflower,rce
 
 requests:
   - raw:
@@ -26,10 +26,10 @@ requests:
     extractors:
       - type: regex
         name: cid
+        internal: true
         group: 1
         regex:
-          - '"verify_string":"(.*)'
-        internal: true
+          - '"verify_string":"(.*)"'
 
     req-condition: true
     matchers:
