--- a/technologies/fingerprinthub-web-fingerprints.yaml
+++ b/technologies/fingerprinthub-web-fingerprints.yaml
@@ -7608,7 +7608,7 @@ requests:
       - type: word
         name: microweber
         words:
-          - Website Builder</a> <span>by</span> <a href="https://microweber.org" target="_blank" title="Microweber CMS">Microweber</a></span></p>
+          - '"generator" content="Microweber" />'
 
       - type: word
         name: mihalism-multi-host
