--- a/technologies/subrion-cms-detect.yaml
+++ b/technologies/subrion-cms-detect.yaml
@@ -18,7 +18,7 @@ requests:
       - type: word
         part: body
         words:
-          - "<a href="http://www.subrion.org" title="Open Source CMS">Subrion CMS"
+          - '<a href="http://www.subrion.org" title="Open Source CMS">Subrion CMS"'
 
       - type: status
         status:
