Update and rename technologies/directum-detect.yaml to exposed-panels/directum-login.yaml

--- a/exposed-panels/directum-login.yaml
+++ b/exposed-panels/directum-login.yaml
@@ -1,12 +1,12 @@
-id: directum-detect
+id: directum-login
 
 info:
-  name: Directum Detect
+  name: Directum Login Panel
   author: pikpikcu
   severity: info
   metadata:
     fofa-query: title="Directum"
-  tags: directum,tech
+  tags: directum,panel
 
 requests:
   - method: GET
@@ -18,7 +18,9 @@ requests:
       - type: word
         part: body
         words:
+          - "DIRECTUM Login"
           - "Directum Login"
+        condition: or
 
       - type: status
         status:
