Update and rename technologies/issabel-detect.yaml to exposed-panels/issabel-login.yaml

--- a/exposed-panels/issabel-login.yaml
+++ b/exposed-panels/issabel-login.yaml
@@ -1,12 +1,12 @@
-id: issabel-detect
+id: issabel-login
 
 info:
-  name: Issabel Detect
+  name: Issabel Login Panel
   author: pikpikcu
   severity: info
   metadata:
     fofa-query: title="Issabel"
-  tags: issabel,tech
+  tags: issabel,panel
 
 requests:
   - method: GET
@@ -20,6 +20,7 @@ requests:
         words:
           - '<a href="http://www.issabel.org"'
           - '<title>Issabel - Login page</title>'
+        condition: or
 
       - type: status
         status:
