--- a/cnvd/2019/CNVD-2019-06255.yaml
+++ b/cnvd/2019/CNVD-2019-06255.yaml
@@ -3,7 +3,7 @@ id: CNVD-2019-06255
 info:
   name: CatfishCMS RCE
   author: Lark-Lab
-  severity: Critical
+  severity: critical
   description: CatfishCMS 4.8.54 contains a remote command execution vulnerability in the "method" parameter.
   remediation: Upgrade to CatfishCMS version 4.8.54 or later.
   reference:
