--- a/technologies/jeecg-boot-detect.yaml
+++ b/technologies/jeecg-boot-detect.yaml
@@ -4,6 +4,7 @@ info:
   name: Jeecg-Boot Detect
   author: pikpikcu
   severity: info
+  reference: http://www.jeecg.com/
   metadata:
     fofa-query: title="Jeecg-Boot"
   tags: jeecg-boot,tech
@@ -14,10 +15,10 @@ requests:
       - "{{BaseURL}}"
       - "{{BaseURL}}/jeecg-boot/"
 
+    stop-at-first-match: true
     matchers-condition: and
     matchers:
       - type: word
         part: body
         words:
-          - "Jeecg-Boot 后台服务API接口文档"
-          - "<title>Jeecg-Boot 企业级快速开发平台</title>"
+          - "Jeecg-Boot"
