Update and rename technologies/lLibrenms-detect.yaml to exposed-panels/librenms-login.yaml

--- a/exposed-panels/librenms-login.yaml
+++ b/exposed-panels/librenms-login.yaml
@@ -1,12 +1,12 @@
-id: lLibrenms-detect
+id: librenms-login
 
 info:
-  name: LibreNMS Detect
+  name: LibreNMS Login Panel
   author: pikpikcu
   severity: info
   metadata:
     fofa-query: title="librenms"
-  tags: lLibrenms,tech
+  tags: librenms,panel
 
 requests:
   - method: GET
