--- a/technologies/livehelperchat-detect.yaml
+++ b/technologies/livehelperchat-detect.yaml
@@ -18,7 +18,9 @@ requests:
       - type: word
         part: body
         words:
-          - '<a href="http://livehelperchat.com" target="_blank">Live Helper Chat'
+          - 'href="http://livehelperchat.com"'
+          - 'Live Helper Chat'
+        condition: and
 
       - type: status
         status:
