--- a/exposed-panels/ocs-inventory-login.yaml
+++ b/exposed-panels/ocs-inventory-login.yaml
@@ -1,18 +1,20 @@
-id: ocs-inventory-detect
+id: ocs-inventory-login
 
 info:
-  name: OCS Inventory Detect
+  name: OCS Inventory Login Panel
   author: pikpikcu
   severity: info
   metadata:
     fofa-query: title="OCS Inventory"
-  tags: ocs-inventory,tech
+  tags: ocs-inventory,panel
 
 requests:
   - method: GET
     path:
       - "{{BaseURL}}"
 
+    redirects: true
+    max-redirects: 2
     matchers-condition: and
     matchers:
       - type: word
