--- a/technologies/php-fusion-detect.yaml
+++ b/technologies/php-fusion-detect.yaml
@@ -6,19 +6,21 @@ info:
   severity: info
   metadata:
     fofa-query: title="PHP-Fusion"
-  tags: php,tech
+  tags: php,tech,php-fusion
 
 requests:
   - method: GET
     path:
-      - "{{BaseURL}}/home.php"
+      - "{{BaseURL}}"
 
+    redirects: true
+    max-redirects: 2
     matchers-condition: and
     matchers:
       - type: word
         part: body
         words:
-          - "Powered by <a href='https://www.php-fusion.co.uk'>PHP-Fusion"
+          - "PHP-Fusion"
 
       - type: status
         status:
