--- a/technologies/piwigo-detect.yaml
+++ b/technologies/piwigo-detect.yaml
@@ -18,7 +18,9 @@ requests:
       - type: word
         part: body
         words:
-          - '<a href="https://cn.piwigo.org">Piwigo</a>'
+          - 'piwigo.org">Piwigo</a>'
+          - 'Piwigo (aka PWG), see piwigo.org'
+        condition: or
 
       - type: status
         status:
