--- a/technologies/subrion-cms-detect.yaml
+++ b/technologies/subrion-cms-detect.yaml
@@ -6,6 +6,7 @@ info:
   severity: info
   metadata:
     fofa-query: title="subrion"
+    shodan-query: http.component:"Subrion"
   tags: subrion,tech
 
 requests:
@@ -18,7 +19,9 @@ requests:
       - type: word
         part: body
         words:
-          - '<a href="http://www.subrion.org" title="Open Source CMS">Subrion CMS"'
+          - 'subrion.org" title="Open Source CMS">Subrion CMS'
+          - 'Subrion CMS - Open Source Content Management System'
+        condition: or
 
       - type: status
         status:
