--- a/token-spray/api-launchdarkly.yaml
+++ b/token-spray/api-launchdarkly.yaml
@@ -4,8 +4,7 @@ info:
   name: LaunchDarkly REST API
   author: Luqmaan Hadia
   severity: info
-  reference:
-    - https://apidocs.launchdarkly.com/
+  reference: https://apidocs.launchdarkly.com/
   tags: token-spray,launchdarkly
 
 self-contained: true
@@ -24,4 +23,6 @@ requests:
 
       - type: word
         words:
-          - "totalCount"
+          - '"totalCount":'
+          - '"items":'
+        condition: and
