Enhancement: vulnerabilities/other/accent-microcomputers-lfi.yaml by mp

--- a/vulnerabilities/other/accent-microcomputers-lfi.yaml
+++ b/vulnerabilities/other/accent-microcomputers-lfi.yaml
@@ -4,10 +4,15 @@ info:
   name: Accent Microcomputers LFI
   author: 0x_Akoko
   severity: high
+  description: A local file inclusion vulnerability in Accent Microcomputers offerings could allow remote attackers to retrieve password files.
   reference:
     - https://cxsecurity.com/issue/WLB-2018050036
     - http://www.accent.com.pl
   tags: microcomputers,accent,lfi
+  classification:
+    cvss-metrics: #CVSS:3.0/AV:L/AC:L/PR:L/UI:N/S:U/C:L/I:N/A:N 
+    cvss-score: 0.0
+    cwe-id: CWE-200
 
 requests:
   - method: GET
@@ -24,3 +29,5 @@ requests:
       - type: status
         status:
           - 200
+
+# Enhanced by mp on 2022/03/02
