Enhancement: vulnerabilities/other/accent-microcomputers-lfi.yaml by mp

--- a/vulnerabilities/other/accent-microcomputers-lfi.yaml
+++ b/vulnerabilities/other/accent-microcomputers-lfi.yaml
@@ -10,9 +10,10 @@ info:
     - http://www.accent.com.pl
   tags: microcomputers,accent,lfi
   classification:
-    cvss-metrics: #CVSS:3.0/AV:L/AC:L/PR:L/UI:N/S:U/C:L/I:N/A:N 
-    cvss-score: 0.0
-    cwe-id: CWE-200
+    cvss-metrics: CVSS:3.0/AV:N/AC:L/PR:N/UI:N/S:C/C:H/I:N/A:N
+    cvss-score: 8.6
+    cve-id:
+    cwe-id: CWE-22
 
 requests:
   - method: GET
