Enhancement: default-logins/apache/tomcat-default-login.yaml by mp

--- a/default-logins/apache/tomcat-default-login.yaml
+++ b/default-logins/apache/tomcat-default-login.yaml
@@ -1,9 +1,15 @@
 id: tomcat-default-login
+
 info:
   name: Tomcat Manager Default Login
   author: pdteam
   severity: high
+  description: Apache Tomcat Manager default credentials were discovered. 
   tags: tomcat,apache,default-login
+  reference:
+    - https://www.trendmicro.com/vinfo/us/threat-encyclopedia/vulnerability/3407/apache-tomcat-application-manager-default-ovwebusr-password-vulnerability
+  classification:
+    cwe-id: 255
 
 requests:
   - raw:
@@ -64,3 +70,5 @@ requests:
       - type: word
         words:
           - Apache Tomcat
+
+# Enhanced by mp on 2022/03/02
