--- a/default-logins/azkaban/azkaban-default-login.yaml
+++ b/default-logins/azkaban/azkaban-default-login.yaml
@@ -4,7 +4,9 @@ info:
   name: Azkaban Web Client Default Credential
   author: pussycat0x
   severity: high
-  reference: https://www.shodan.io/search?query=http.title%3A%22Azkaban+Web+Client%22
+  description: Azkaban is a batch workflow job scheduler created at LinkedIn to run Hadoop jobs.  Default web client credentials were discovered. 
+  reference:
+    - https://www.shodan.io/search?query=http.title%3A%22Azkaban+Web+Client%22
   tags: default-login,azkaban
 
 requests:
@@ -45,3 +47,5 @@ requests:
       - type: kval
         kval:
           - azkaban.browser.session.id
+
+# Enhanced by mp on 2022/03/02
