--- a/default-logins/azkaban/azkaban-default-login.yaml
+++ b/default-logins/azkaban/azkaban-default-login.yaml
@@ -8,6 +8,8 @@ info:
   reference:
     - https://www.shodan.io/search?query=http.title%3A%22Azkaban+Web+Client%22
   tags: default-login,azkaban
+  classification:
+    cwe-id: 255
 
 requests:
   - raw:
@@ -47,5 +49,7 @@ requests:
       - type: kval
         kval:
           - azkaban.browser.session.id
+
+# Enhanced by mp on 2022/03/02
 
 # Enhanced by mp on 2022/03/02
