Enhancement: default-logins/axis2/axis2-default-login.yaml by mp

--- a/default-logins/axis2/axis2-default-login.yaml
+++ b/default-logins/axis2/axis2-default-login.yaml
@@ -1,7 +1,7 @@
 id: CVE-2010-0219
 
 info:
-  name: Axis2 Default Login
+  name: Apache Axis2 Default Login
   author: pikpikcu
   severity: high
   description: Apache Axis2, as used in dswsbobje.war in SAP BusinessObjects Enterprise XI 3.2, CA ARCserve D2D r15, and other products, has a default password of axis2 for the admin account, which makes it easier for remote attackers to execute arbitrary code by uploading a crafted web service.
