Enhancement: default-logins/apache/tomcat-default-login.yaml by mp

--- a/default-logins/apache/tomcat-default-login.yaml
+++ b/default-logins/apache/tomcat-default-login.yaml
@@ -1,74 +1,38 @@
-id: tomcat-default-login
+id: chinaunicom-default-login
 
 info:
-  name: Tomcat Manager Default Login
-  author: pdteam
+  name: China Unicom Modem Default Login
+  author: princechaddha
   severity: high
-  description: Apache Tomcat Manager default credentials were discovered. 
-  tags: tomcat,apache,default-login
-  reference:
-    - https://www.trendmicro.com/vinfo/us/threat-encyclopedia/vulnerability/3407/apache-tomcat-application-manager-default-ovwebusr-password-vulnerability
+  description: Default login information that would allow administrative access to a China Unicom Modem was discovered.
+  tags: chinaunicom,default-login
   classification:
-    cwe-id: 255
+    cwe-id: 798
 
 requests:
   - raw:
       - |
-        GET /manager/html HTTP/1.1
+        POST /cu.html HTTP/1.1
         Host: {{Hostname}}
-        Authorization: Basic {{base64(username + ':' + password)}}
 
+        frashnum=&action=login&Frm_Logintoken=1&Username={{username}}&Password={{password}}&Username=&Password=
+
+    attack: pitchfork
     payloads:
       username:
-        - tomcat
-        - admin
-        - ovwebusr
-        - j2deployer
-        - cxsdk
-        - ADMIN
-        - xampp
-        - tomcat
-        - QCC
-        - admin
-        - root
-        - role1
-        - role
-        - tomcat
-        - admin
-        - role1
-        - both
-        - admin
-
+        - CUAdmin
       password:
-        - tomcat
-        - admin
-        - OvW*busr1
-        - j2deployer
-        - kdsxc
-        - ADMIN
-        - xampp
-        - s3cret
-        - QLogic66
-        - tomcat
-        - root
-        - role1
-        - changethis
-        - changethis
-        - j5Brn9
-        - tomcat
-        - tomcat
-        - 123456
-
-    attack: pitchfork  # Available options: sniper, pitchfork and clusterbomb
+        - CUAdmin
 
     matchers-condition: and
     matchers:
       - type: status
         status:
-          - 200
+          - 302
 
       - type: word
         words:
-          - Apache Tomcat
+          - "/menu.gch"
+        part: header
 
 # Enhanced by mp on 2022/03/02
