--- a/default-logins/dell/dell-idrac-default-login.yaml
+++ b/default-logins/dell/dell-idrac-default-login.yaml
@@ -4,7 +4,7 @@ info:
   name: Dell iDRAC6/7/8 Default Login
   author: kophjager007
   severity: high
-  description: Dell iDRAC6/7/8 default login information was discovered.
+  description: Dell iDRAC6/7/8 default login information was discovered. The default iDRAC username and password are widely known, and any user with access to the server could change the default password.  
   reference:
     - https://securityforeveryone.com/tools/dell-idrac6-7-8-default-login-scanner
   tags: dell,idrac,default-login
