Update and rename digitalrebar-provision-default-login.yaml to digitalrebar-default-login.yaml

--- a/default-logins/digitalrebar/digitalrebar-default-login.yaml
+++ b/default-logins/digitalrebar/digitalrebar-default-login.yaml
@@ -1,10 +1,9 @@
-id: digitalrebar-provision-default-login
+id: digitalrebar-default-login
 
 info:
   name: RackN Digital Rebar provision default login
   author: c-sh0
-  reference:
-     - https://docs.rackn.io/en/latest/doc/faq-troubleshooting.html?#what-are-the-default-passwords
+  reference: https://docs.rackn.io/en/latest/doc/faq-troubleshooting.html?#what-are-the-default-passwords
   severity: high
   tags: rackn,digitalrebar,default-login
 
