--- a/vulnerabilities/wordpress/wp-qards-listing.yaml
+++ b/vulnerabilities/wordpress/wp-qards-listing.yaml
@@ -1,20 +1,24 @@
-id: wordpress-plugins-qards
+id: wp-qards-listing
 info:
   name: WordPress Plugin Qards
   author: pussycat0x
-  severity: low
+  severity: info
   description: Searches for sensitive directories present in the wordpress-plugins plugin.
-  tags: wordpress,listing
+  tags: wordpress,listing,wp-plugin,wp
+
 requests:
   - method: GET
     path:
       - "{{BaseURL}}/wp-content/plugins/qards/"
+
     matchers-condition: and
     matchers:
       - type: word
         words:
           - "Index of"
-          - "/wp-content/plugins/qards/"
+          - "/wp-content/plugins/qards"
+        condition: and
+
       - type: status
         status:
           - 200
