--- a/vulnerabilities/wordpress/dzs-zoomsounds-listing.yaml
+++ b/vulnerabilities/wordpress/dzs-zoomsounds-listing.yaml
@@ -1,20 +1,23 @@
-id: wordpress-plugins-dzs-zoomsounds
+id: dzs-zoomsounds-listing
 info:
   name: WordPress Plugin dzs zoomsounds
   author: pussycat0x
-  severity: low
+  severity: info
   description: Searches for sensitive directories present in the wordpress-plugins plugin.
-  tags: wordpress,listing
+  tags: wordpress,listing,wp-plugin,wp
+
 requests:
   - method: GET
     path:
       - "{{BaseURL}}/wp-content/plugins/dzs-zoomsounds/"
+
     matchers-condition: and
     matchers:
       - type: word
         words:
           - "Index of"
-          - "/wp-content/plugins/dzs-zoomsounds/"
+          - "/wp-content/plugins/dzs-zoomsounds"
+
       - type: status
         status:
           - 200
