Update and rename exposures/apis/cisco-ucm-uds-api-username-enumeration.yaml to vulnerabilities/cisco/cucm-username-enumeration.yaml

--- a/vulnerabilities/cisco/cucm-username-enumeration.yaml
+++ b/vulnerabilities/cisco/cucm-username-enumeration.yaml
@@ -1,12 +1,12 @@
-id: cisco-ucm-uds-api-username-enumeration
+id: cucm-username-enumeration
 
 info:
   name: Cisco Unified Call Manager (CUCM) User Data Services Username Enumeration API  - Unauthenticated
   author: manasmbellani
   severity: medium
-  reference:
-    - https://www.n00py.io/2022/01/unauthenticated-dumping-of-usernames-via-cisco-unified-call-manager-cucm/
-  tags: exposure,cisco,cucm
+  reference: https://www.n00py.io/2022/01/unauthenticated-dumping-of-usernames-via-cisco-unified-call-manager-cucm/
+  remediation: To mitigate this, enable Contact Search Authentication.
+  tags: cisco,cucm,unauth,enum
 
 requests:
   - method: GET
@@ -27,8 +27,8 @@ requests:
         condition: and
 
       - type: dsl
+        part: header
         dsl:
           - contains(tolower(content_type), 'application/xml')
           - contains(tolower(content_type), 'text/xml')
-        part: header
         condition: or
