Fix accidental template mixup
Cobbler default pw clobbered Tomcat Manager default pw

--- a/default-logins/apache/tomcat-default-login.yaml
+++ b/default-logins/apache/tomcat-default-login.yaml
@@ -1,51 +1,59 @@
-id: cobbler-default-login
-
+id: tomcat-default-login
 info:
-  name: Cobbler Default Login
-  author: c-sh0
-  description: Cobbler contains a vulnerability where default login information is available via /etc/cobbler/modules.conf in the [authentication] part of the module “testing” and “testing:testing” is used to authenticate users.
-  reference:
-    - https://seclists.org/oss-sec/2022/q1/146
-    - https://github.com/cobbler/cobbler/issues/2307
-    - https://github.com/cobbler/cobbler/issues/2909
+  name: Tomcat Manager Default Login
+  author: pdteam
   severity: high
-  tags: cobbler,default-login,api
-  classification:
-    cwe-id: 798
+  tags: tomcat,apache,default-login
 
 requests:
   - raw:
       - |
-        POST {{BaseURL}}/cobbler_api HTTP/1.1
+        GET /manager/html HTTP/1.1
         Host: {{Hostname}}
-        Content-Type: text/xml
-        Accept: text/html,application/xhtml+xml,application/xml;q=0.9,*/*;q=0.8
+        Authorization: Basic {{base64(username + ':' + password)}}
 
-        <?xml version='1.0'?>
-        <methodCall>
-          <methodName>login</methodName>
-          <params>
-            <param>
-              <value>
-                <string>{{username}}</string>
-              </value>
-            </param>
-            <param>
-              <value>
-                <string>{{password}}</string>
-              </value>
-            </param>
-          </params>
-        </methodCall>
-
-    attack: pitchfork
     payloads:
       username:
-        - cobbler
-        - testing
+        - tomcat
+        - admin
+        - ovwebusr
+        - j2deployer
+        - cxsdk
+        - ADMIN
+        - xampp
+        - tomcat
+        - QCC
+        - admin
+        - root
+        - role1
+        - role
+        - tomcat
+        - admin
+        - role1
+        - both
+        - admin
+
       password:
-        - cobbler
-        - testing
+        - tomcat
+        - admin
+        - OvW*busr1
+        - j2deployer
+        - kdsxc
+        - ADMIN
+        - xampp
+        - s3cret
+        - QLogic66
+        - tomcat
+        - root
+        - role1
+        - changethis
+        - changethis
+        - j5Brn9
+        - tomcat
+        - tomcat
+        - 123456
+
+    attack: pitchfork  # Available options: sniper, pitchfork and clusterbomb
 
     matchers-condition: and
     matchers:
@@ -54,19 +62,5 @@ requests:
           - 200
 
       - type: word
-        part: header
         words:
-          - 'text/xml'
-
-      - type: dsl
-        dsl:
-          - "!contains(tolower(body), '<name>faultCode</name>')"
-          - "!contains(tolower(body), 'login failed')"
-        condition: or
-
-      - type: regex
-        part: body
-        regex:
-          - "(.*[a-zA-Z0-9].+==)</string></value>"
-
-# Enhanced by mp on 2022/03/02
+          - Apache Tomcat
