Enhancement: default-logins/glpi/glpi-default-login.yaml by mp

--- a/default-logins/glpi/glpi-default-login.yaml
+++ b/default-logins/glpi/glpi-default-login.yaml
@@ -7,7 +7,8 @@ info:
   tags: glpi,default-login
   description: GLPI is an ITSM software tool that helps you plan and manage IT changes. This template checks if a default super admin account (glpi/glpi) is enabled.
   reference: https://glpi-project.org/
-
+  classification:
+    cwe-id: 798
 requests:
   - raw:
       - |
@@ -65,3 +66,5 @@ requests:
       - type: status
         status:
           - 200
+
+# Enhanced by mp on 2022/03/03
