Enhancement: default-logins/exacqvision/exacqvision-default-login.yaml by mp

--- a/default-logins/exacqvision/exacqvision-default-login.yaml
+++ b/default-logins/exacqvision/exacqvision-default-login.yaml
@@ -8,7 +8,7 @@ info:
   tags: exacqvision,default-login
   reference: https://cdn.exacq.com/auto/manspec/files_2/exacqvision_user_manuals/web_service/exacqVision_Web_Service_Configuration_User_Manual_(version%208.8).pdf
   classification:
-    cwe-id: 798
+    cwe-id: cwe-798
 
 requests:
   - raw:
