Enhancement: default-logins/dvwa/dvwa-default-login.yaml by mp

--- a/default-logins/dvwa/dvwa-default-login.yaml
+++ b/default-logins/dvwa/dvwa-default-login.yaml
@@ -9,7 +9,7 @@ info:
   reference:
     - https://opensourcelibs.com/lib/dvwa
   classification:
-    cwe-id: 798
+    cwe-id: cwe-798
 
 requests:
   - raw:
