Enhancement: default-logins/druid/druid-default-login.yaml by mp

--- a/default-logins/druid/druid-default-login.yaml
+++ b/default-logins/druid/druid-default-login.yaml
@@ -7,7 +7,7 @@ info:
   description: Apache Druid default login information (admin/admin) was discovered.
   tags: druid,default-login
   classification:
-    cwe-id: 798
+    cwe-id: cwe-798
 
 requests:
   - raw:
