--- a/default-logins/apache/tomcat-default-login.yaml
+++ b/default-logins/apache/tomcat-default-login.yaml
@@ -2,7 +2,7 @@ id: tomcat-default-login
 info:
   name: ApahceTomcat Manager Default Login
   author: pdteam
-  description: Apache Tomcat Manager default login credentials were discovered. 
+  description: Apache Tomcat Manager default login credentials were discovered. This template checks for multiple variations. 
   severity: high
   reference:
     - https://www.rapid7.com/db/vulnerabilities/apache-tomcat-default-ovwebusr-password/
