--- a/default-logins/azkaban/azkaban-default-login.yaml
+++ b/default-logins/azkaban/azkaban-default-login.yaml
@@ -9,7 +9,7 @@ info:
     - https://www.shodan.io/search?query=http.title%3A%22Azkaban+Web+Client%22
   tags: default-login,azkaban
   classification:
-    cwe-id: 798
+    cwe-id: CWE-798
 
 requests:
   - raw:
