Enhancement: default-logins/cobbler/cobbler-default-login.yaml by mp

--- a/default-logins/cobbler/cobbler-default-login.yaml
+++ b/default-logins/cobbler/cobbler-default-login.yaml
@@ -11,7 +11,7 @@ info:
   severity: high
   tags: cobbler,default-login,api
   classification:
-    cwe-id: cwe-798
+    cwe-id: CWE-798
 
 requests:
   - raw:
