--- a/default-logins/dell/emcecom-default-login.yaml
+++ b/default-logins/dell/emcecom-default-login.yaml
@@ -9,7 +9,7 @@ info:
   reference: https://www.dell.com/support/kbdoc/en-za/000171270/vipr-controller-operation-denied-by-clariion-array-you-are-not-privileged-to-perform-the-requested-operation
   tags: dell,emc,ecom,default-login
   classification:
-    cwe-id: cwe-798
+    cwe-id: CWE-798
 
 requests:
   - raw:
