Enhancement: default-logins/flir/flir-default-login.yaml by mp

--- a/default-logins/flir/flir-default-login.yaml
+++ b/default-logins/flir/flir-default-login.yaml
@@ -9,7 +9,7 @@ info:
     - https://securitycamcenter.com/flir-default-password/
   tags: default-login,flir,camera,iot
   classificaiton:
-    cwe-id: cwe-798
+    cwe-id: CWE-798
 
 requests:
   - raw:
