Enhancement: default-logins/frps/frp-default-login.yaml by mp

--- a/default-logins/frps/frp-default-login.yaml
+++ b/default-logins/frps/frp-default-login.yaml
@@ -8,7 +8,7 @@ info:
   tags: frp,default-login
   reference: https://github.com/fatedier/frp/issues/1840
   classification:
-    cwe-id: 798
+    cwe-id: CWE-798
 
 requests:
   - raw:
