Enhancement: default-logins/gitlab/gitlab-weak-login.yaml by mp

--- a/default-logins/gitlab/gitlab-weak-login.yaml
+++ b/default-logins/gitlab/gitlab-weak-login.yaml
@@ -12,7 +12,7 @@ info:
   metadata:
     shodan-query: http.title:"GitLab"
   classificaiton:
-    cwe-id: 798
+    cwe-id: CWE-798
 
 requests:
   - raw:
