--- a/default-logins/glpi/glpi-default-login.yaml
+++ b/default-logins/glpi/glpi-default-login.yaml
@@ -5,10 +5,11 @@ info:
   author: andysvints
   severity: high
   tags: glpi,default-login
-  description: GLPI is an ITSM software tool that helps you plan and manage IT changes. This template checks if a default super admin account (glpi/glpi) is enabled.
+  description: GLPI default login credentials were discovered. GLPI is an ITSM software tool that helps you plan and manage IT changes. This template checks if a default super admin account (glpi/glpi) is enabled.
   reference: https://glpi-project.org/
   classification:
-    cwe-id: 798
+    cwe-id: CWE-798
+
 requests:
   - raw:
       - |
