template name updates

--- a/cnvd/2019/CNVD-2019-19299.yaml
+++ b/cnvd/2019/CNVD-2019-19299.yaml
@@ -1,7 +1,7 @@
 id: CNVD-2019-19299
 
 info:
-  name: Zhiyuan A8 Arbitrary File Writing to Remote Code Execution
+  name: Zhiyuan A8 Arbitrary File Write (RCE)
   author: daffainfo
   severity: critical
   reference:
