--- a/vulnerabilities/cisco/cucm-username-enumeration.yaml
+++ b/vulnerabilities/cisco/cucm-username-enumeration.yaml
@@ -1,7 +1,7 @@
 id: cucm-username-enumeration
 
 info:
-  name: Cisco Unified Call Manager (CUCM) User Data Services Username Enumeration API  - Unauthenticated
+  name: Cisco Unified Call Manager Username Enumeration
   author: manasmbellani
   severity: medium
   reference: https://www.n00py.io/2022/01/unauthenticated-dumping-of-usernames-via-cisco-unified-call-manager-cucm/
