--- a/default-logins/digitalrebar/digitalrebar-default-login.yaml
+++ b/default-logins/digitalrebar/digitalrebar-default-login.yaml
@@ -3,8 +3,8 @@ id: digitalrebar-default-login
 info:
   name: RackN Digital Rebar provision default login
   author: c-sh0
-  reference: https://docs.rackn.io/en/latest/doc/faq-troubleshooting.html?#what-are-the-default-passwords
   severity: high
+  reference: https://docs.rackn.io/en/latest/doc/faq-troubleshooting.html?#what-are-the-default-passwords
   tags: rackn,digitalrebar,default-login
 
 requests:
@@ -19,18 +19,18 @@ requests:
         - rocketskates
       password:
         - r0cketsk8ts
-    attack: pitchfork
 
+    attack: pitchfork
     matchers-condition: and
     matchers:
       - type: status
         status:
           - 200
 
-      - type: word
+      - type: regex
         part: header
-        words:
-          - 'X-Drp-'
+        regex:
+          - '(?i)(X-Drp-)'
 
       - type: word
         part: body
