--- a/exposed-panels/kibana-panel.yaml
+++ b/exposed-panels/kibana-panel.yaml
@@ -13,14 +13,17 @@ requests:
     path:
       - "{{BaseURL}}/login"
 
+    redirects: true
+    max-redirects: 2
     matchers-condition: or
     matchers:
       - type: word
         part: body
         words:
           - "<title>Kibana</title>"
+          - "<title>Elastic</title>"
 
-      - type: word
+      - type: regex
         part: header
-        words:
-          - "Kbn-Name:"
+        regex:
+          - '(?i)(Kbn-Name)'
