--- a/exposed-panels/kibana-panel.yaml
+++ b/exposed-panels/kibana-panel.yaml
@@ -2,7 +2,7 @@ id: kibana-panel
 
 info:
   name: Kibana Panel Login
-  author: petruknisme,daffainfo
+  author: petruknisme,daffainfo,c-sh0
   severity: info
   metadata:
     shodan-query: http.title:"Kibana"
