--- a/default-logins/flir/flir-default-login.yaml
+++ b/default-logins/flir/flir-default-login.yaml
@@ -8,7 +8,7 @@ info:
   reference:
     - https://securitycamcenter.com/flir-default-password/
   tags: default-login,flir,camera,iot
-  classificaiton:
+  classification:
     cwe-id: CWE-798
 
 requests:
