--- a/default-logins/gitlab/gitlab-weak-login.yaml
+++ b/default-logins/gitlab/gitlab-weak-login.yaml
@@ -11,7 +11,7 @@ info:
     - https://git-scm.com/book/en/v2/Git-on-the-Server-GitLab
   metadata:
     shodan-query: http.title:"GitLab"
-  classificaiton:
+  classification:
     cwe-id: CWE-798
 
 requests:
