--- a/exposed-panels/kentico-login.yaml
+++ b/exposed-panels/kentico-login.yaml
@@ -1,24 +1,28 @@
-id: Kentico-login
+id: kentico-login
 
 info:
-  name: Kentico Login Page Detection
+  name: Kentico Login Panel
   author: d4vy
   severity: info
-  tags: panel, login, kentico
+  tags: panel,login,kentico
 
 requests:
   - method: GET
     path:
       - "{{BaseURL}}/Admin/CMSAdministration.aspx"
-      - "{{BaseURL}}/CMSPages/logon.aspx?ReturnUrl=%2fAdmin%2fCMSAdministration.aspx"
+      - "{{BaseURL}}/CMSPages/logon.aspx"
 
-    matchers-condition: and
+    stop-at-first-match: true
+    matchers-condition: or
     matchers:
-      - type: word
-        part: body
-        words:
-          - 'action="./logon.aspx?ReturnUrl=%2fAdmin%2fCMSAdministration.aspx"'
+      - type: dsl
+        dsl:
+          - "status_code==302"
+          - "contains(tolower(body), 'cmspages/logon.aspx')"
+        condition: and
 
-      - type: status
-        status:
-          - 200
+      - type: dsl
+        dsl:
+          - "status_code==200"
+          - "contains(tolower(body), 'cmspages/getresource.ashx')"
+        condition: and
