--- a/exposed-panels/kentico-login.yaml
+++ b/exposed-panels/kentico-login.yaml
@@ -4,6 +4,7 @@ info:
   name: Kentico Login Panel
   author: d4vy
   severity: info
+  reference: https://docs.xperience.io/k8/using-the-kentico-interface
   tags: panel,login,kentico
 
 requests:
