Enhancement: default-logins/activemq/activemq-default-login.yaml by mp

--- a/default-logins/activemq/activemq-default-login.yaml
+++ b/default-logins/activemq/activemq-default-login.yaml
@@ -4,8 +4,7 @@ info:
   name: Apache ActiveMQ Default Login
   author: pdteam
   severity: medium
-  description: Apache ActiveMQ default login information was discovered. The default administration user name and password for the Apache ActiveMQ Administration Console is admin and admin respectively.
-  remediation: Change the default credentials.
+  description: Apache ActiveMQ default login information was discovered.
   reference: https://knowledge.broadcom.com/external/article/142813/vulnerability-apache-activemq-admin-con.html
   tags: apache,activemq,default-login
 
