--- a/exposed-panels/kibana-panel.yaml
+++ b/exposed-panels/kibana-panel.yaml
@@ -22,6 +22,8 @@ requests:
         words:
           - "<title>Kibana</title>"
           - "<title>Elastic</title>"
+          - "<title>Kibana Login</title>"
+        condition: or
 
       - type: regex
         part: header
