--- a/exposed-panels/jamf-panel.yaml
+++ b/exposed-panels/jamf-panel.yaml
@@ -2,7 +2,7 @@ id: jamf-panel
 
 info:
   name: JAMF MDM Panel
-  author: pdteam
+  author: pdteam,idealphase
   severity: info
   metadata:
     shodan-query: http.favicon.hash:1262005940
