Enhancement: default-logins/google/google-earth-dlogin.yaml by mp

--- a/default-logins/google/google-earth-dlogin.yaml
+++ b/default-logins/google/google-earth-dlogin.yaml
@@ -4,8 +4,14 @@ info:
   name: Google Earth Enterprise Default Login
   author: orpheus,johnjhacking
   severity: high
-  tags: default-login,google
-  reference: https://www.opengee.org/geedocs/5.2.2/answer/3470759.html
+  description: Google Earth Enterprise default login credentials were discovered.
+  remediation: "To reset the username and password:
+sudo /opt/google/gehttpd/bin/htpasswd -c
+/opt/google/gehttpd/conf.d/.htpasswd geapacheuse"
+  tags: default-login,google-earth
+  reference:
+    - https://johnjhacking.com/blog/gee-exploitation/
+    - https://www.opengee.org/geedocs/5.2.2/answer/3470759.html
   metadata:
     shodan-query: 'title:"GEE Server"'
 
@@ -35,3 +41,5 @@ requests:
         words:
           - 'DashboardPanel'
           - 'Earth Enterprise Server'
+
+# Enhanced by mp on 2022/03/08
