Enhancement: default-logins/gophish/gophish-default-login.yaml by mp

--- a/default-logins/gophish/gophish-default-login.yaml
+++ b/default-logins/gophish/gophish-default-login.yaml
@@ -1,10 +1,13 @@
 id: gophish-default-login
 
 info:
-  name: Gophish < v0.10.1 default credentials
+  name: Gophish < v0.10.1 Default Credentials
   author: arcc,dhiyaneshDK
   severity: high
   tags: gophish,default-login
+  description: For versions of Gophish > 0.10.1, the temporary administrator credentials are printed in the logs when you first execute the Gophish binary.
+  reference:
+    - https://docs.getgophish.com/user-guide/getting-started
 
 requests:
   - raw:
@@ -44,3 +47,5 @@ requests:
           - "contains(tolower(all_headers), 'gophish')"
           - "status_code==302"
         condition: and
+
+# Enhanced by mp on 2022/03/08
