--- a/exposed-panels/axigen-webmail.yaml
+++ b/exposed-panels/axigen-webmail.yaml
@@ -2,7 +2,7 @@ id: axigen-webmail
 
 info:
   name: Axigen WebMail
-  author: dhiyaneshDk
+  author: dhiyaneshDk,idealphase
   severity: info
   description: This template determines if Axigen Webmail is running.
   reference:
@@ -25,5 +25,12 @@ requests:
       - type: status
         status:
           - 200
+
+    extractors:
+      - type: regex
+        group: 1
+        part: body
+        regex:
+          - '<script type="text\/javascript" src="js\/lib_login\.js\?v=(.+)"><\/script>'
 
 # Enhanced by cs on 2022/02/25
