Added missing condition

--- a/technologies/puppetdb-detect.yaml
+++ b/technologies/puppetdb-detect.yaml
@@ -12,6 +12,7 @@ requests:
     path:
       - "{{BaseURL}}/pdb/meta/v1/version"
 
+    matchers-condition: and
     matchers:
       - type: status
         status:
