--- a/exposed-panels/matomo-login-portal.yaml
+++ b/exposed-panels/matomo-login-portal.yaml
@@ -4,18 +4,21 @@ info:
   name: Matomo Login Portal
   author: Arr0way
   severity: info
-  tags: panel
   description: Matomo provides website analytics
+  tags: panel,matomo
 
 requests:
   - method: GET
     path:
-      - "{{BaseURL}}/"
+      - "{{BaseURL}}"
       - "{{BaseURL}}/matomo"
+
     redirects: true
-    matchers-condition: or
+    max-redirects: 2
     matchers:
       - type: word
-        words:
-          - "<title>Sign in - Matomo</title>"
         part: body
+        words:
+          - "Sign in"
+          - "Matomo"
+        condition: and
