--- a/exposed-panels/matomo-login-portal.yaml
+++ b/exposed-panels/matomo-login-portal.yaml
@@ -13,6 +13,7 @@ requests:
       - "{{BaseURL}}"
       - "{{BaseURL}}/matomo"
 
+    stop-at-first-match: true
     redirects: true
     max-redirects: 2
     matchers:
