--- a/default-logins/gophish/gophish-default-login.yaml
+++ b/default-logins/gophish/gophish-default-login.yaml
@@ -8,6 +8,11 @@ info:
   description: For versions of Gophish > 0.10.1, the temporary administrator credentials are printed in the logs when you first execute the Gophish binary.
   reference:
     - https://docs.getgophish.com/user-guide/getting-started
+  classification:
+    cvss-metrics: CVSS:3.0/AV:N/AC:L/PR:N/UI:N/S:C/C:L/I:L/A:L
+    cvss-score: 8.3
+    cve-id:
+    cwe-id: CWE-522
 
 requests:
   - raw:
@@ -48,4 +53,4 @@ requests:
           - "status_code==302"
         condition: and
 
-# Enhanced by mp on 2022/03/08
+# Enhanced by mp on 2022/03/10
