Enhancement: default-logins/google/google-earth-dlogin.yaml by mp

--- a/default-logins/google/google-earth-dlogin.yaml
+++ b/default-logins/google/google-earth-dlogin.yaml
@@ -14,6 +14,11 @@ sudo /opt/google/gehttpd/bin/htpasswd -c
     - https://www.opengee.org/geedocs/5.2.2/answer/3470759.html
   metadata:
     shodan-query: 'title:"GEE Server"'
+  classification:
+    cvss-metrics: CVSS:3.0/AV:N/AC:L/PR:N/UI:N/S:C/C:L/I:L/A:L
+    cvss-score: 8.3
+    cve-id:
+    cwe-id: CWE-522
 
 requests:
   - raw:
@@ -42,4 +47,4 @@ requests:
           - 'DashboardPanel'
           - 'Earth Enterprise Server'
 
-# Enhanced by mp on 2022/03/08
+# Enhanced by mp on 2022/03/10
