--- a/exposed-panels/axigen-webmail.yaml
+++ b/exposed-panels/axigen-webmail.yaml
@@ -18,9 +18,11 @@ requests:
 
     matchers-condition: and
     matchers:
-      - type: word
-        words:
-          - '<title>Axigen WebMail</title>'
+      - type: regex
+        regex:
+          - '(?i)(Axigen WebMail)'
+          - '<title>Axigen Standard Webmail - (.*)</title>'
+        condition: or
 
       - type: status
         status:
@@ -32,5 +34,3 @@ requests:
         part: body
         regex:
           - '<script type="text\/javascript" src="js\/lib_login\.js\?v=(.+)"><\/script>'
-
-# Enhanced by cs on 2022/02/25
