--- a/exposed-panels/kibana-panel.yaml
+++ b/exposed-panels/kibana-panel.yaml
@@ -11,8 +11,11 @@ info:
 requests:
   - method: GET
     path:
+      - "{{BaseURL}}"
       - "{{BaseURL}}/login"
-
+      - "{{BaseURL}}/app/kibana"
+      
+    stop-at-first-match: true
     redirects: true
     max-redirects: 2
     matchers-condition: or
