--- a/default-logins/pentaho/pentaho-default-login.yaml
+++ b/default-logins/pentaho/pentaho-default-login.yaml
@@ -10,6 +10,7 @@ info:
   tags: pentaho,default-login
   reference:
     - https://www.hitachivantara.com/en-us/pdfd/training/pentaho-lesson-1-user-console-overview.pdf
+  classification:
     cvss-metrics: CVSS:3.0/AV:N/AC:L/PR:N/UI:N/S:C/C:L/I:L/A:L
     cvss-score: 8.3
     cve-id:
