added stop at first match support

--- a/misconfiguration/aem/aem-gql-servlet.yaml
+++ b/misconfiguration/aem/aem-gql-servlet.yaml
@@ -1,7 +1,7 @@
 id: aem-gql-servlet
 
 info:
-  author: DhiyaneshDk (modded by prettyboyaaditya)
+  author: dhiyaneshDk,prettyboyaaditya
   name: AEM GQLServlet
   severity: low
   reference: https://helpx.adobe.com/experience-manager/6-3/sites/developing/using/reference-materials/javadoc/index.html?org/apache/jackrabbit/commons/query/GQL.html
@@ -39,6 +39,8 @@ requests:
       - '{{BaseURL}}///bin///wcm///search///gql.json///a.png?query=type:base%20limit:..1&pathPrefix='
       - '{{BaseURL}}///bin///wcm///search///gql.json///a.js?query=type:base%20limit:..1&pathPrefix='
       - '{{BaseURL}}///bin///wcm///search///gql.json///a.html?query=type:base%20limit:..1&pathPrefix='
+
+    stop-at-first-match: true
     matchers-condition: and
     matchers:
       - type: status
