Enhancement: default-logins/seeddms/seeddms-default-login.yaml by mp

--- a/default-logins/seeddms/seeddms-default-login.yaml
+++ b/default-logins/seeddms/seeddms-default-login.yaml
@@ -1,11 +1,19 @@
 id: seeddms-default-login
 
 info:
-  name: SeedDMS Default Credential
+  name: SeedDMS Default Login
   author: alifathi-h1
   severity: high
+  description: SeedDMS default admin credentials were discovered.
   reference: https://www.redhat.com/sysadmin/install-seeddms
   tags: default-login,seeddms
+  reference:
+    - https://www.seeddms.org/index.php?id=2
+  classification:
+    cvss-metrics: CVSS:3.0/AV:N/AC:L/PR:N/UI:N/S:C/C:L/I:L/A:L
+    cvss-score: 8.3
+    cve-id:
+    cwe-id: CWE-522
 
 requests:
   - raw:
@@ -33,3 +41,5 @@ requests:
       - type: status
         status:
           - 302
+
+# Enhanced by mp on 2022/03/11
