Enhancement: default-logins/solarwinds/solarwinds-default-login.yaml by mp

--- a/default-logins/solarwinds/solarwinds-default-login.yaml
+++ b/default-logins/solarwinds/solarwinds-default-login.yaml
@@ -6,7 +6,8 @@ info:
   severity: high
   description: SolarWinds Orion default admin credentials were discovered.
   tags: solarwinds,default-login
-  reference: https://github.com/solarwinds/OrionSDK/wiki/REST
+  reference:
+    - https://github.com/solarwinds/OrionSDK/wiki/REST
   classification:
     cvss-metrics: CVSS:3.0/AV:N/AC:L/PR:N/UI:N/S:C/C:L/I:L/A:L
     cvss-score: 8.3
