--- a/default-logins/spectracom/spectracom-default-login.yaml
+++ b/default-logins/spectracom/spectracom-default-login.yaml
@@ -3,8 +3,15 @@ id: spectracom-default-login
 info:
   name: Spectracom Default Login
   author: madrobot
-  severity: medium
+  severity: high
   tags: spectracom,default-login
+  reference:
+    - https://orolia.com/manuals/NC/Content/NC_and_SS/Com/Topics/ADMIN/Passwords.htm
+  classification:
+    cvss-metrics: CVSS:3.0/AV:N/AC:L/PR:N/UI:N/S:C/C:L/I:L/A:L
+    cvss-score: 8.3
+    cve-id:
+    cwe-id: CWE-522
 
 requests:
   - raw:
@@ -34,3 +41,5 @@ requests:
       - type: status
         status:
           - 302
+
+# Enhanced by mp on 2022/03/11
