Enhancement: default-logins/spectracom/spectracom-default-login.yaml by mp

--- a/default-logins/spectracom/spectracom-default-login.yaml
+++ b/default-logins/spectracom/spectracom-default-login.yaml
@@ -4,6 +4,7 @@ info:
   name: Spectracom Default Login
   author: madrobot
   severity: high
+  description: Spectracom default admin credentials were discovered.
   tags: spectracom,default-login
   reference:
     - https://orolia.com/manuals/NC/Content/NC_and_SS/Com/Topics/ADMIN/Passwords.htm
