--- a/default-logins/stackstorm/stackstorm-default-login.yaml
+++ b/default-logins/stackstorm/stackstorm-default-login.yaml
@@ -1,7 +1,7 @@
 id: stackstorm-default-login
 
 info:
-  name: Stackstorm Default Login
+  name: StackStorm Default Login
   author: PaperPen
   severity: high
   metadata:
@@ -11,7 +11,7 @@ info:
 
 requests:
   - raw:
-     - |
+      - |
         POST /auth/tokens HTTP/1.1
         Host: {{BaseURL}}
         Accept: application/json, text/plain, */*
@@ -25,7 +25,7 @@ requests:
       password:
         - Ch@ngeMe
     attack: pitchfork
-      
+
     matchers-condition: and
 
     matchers:
@@ -37,5 +37,5 @@ requests:
         condition: and
 
       - type: status
-        status: 
+        status:
           - 201
