--- a/default-logins/stackstorm/stackstorm-default-login.yaml
+++ b/default-logins/stackstorm/stackstorm-default-login.yaml
@@ -14,26 +14,23 @@ requests:
       - |
         POST /auth/tokens HTTP/1.1
         Host: {{BaseURL}}
-        Accept: application/json, text/plain, */*
-        Accept-Encoding: gzip, deflate
         Content-Type: application/json
         Authorization: Basic {{base64(username + ':' + password)}}
 
+    attack: pitchfork
     payloads:
       username:
         - st2admin
       password:
         - Ch@ngeMe
-    attack: pitchfork
 
     matchers-condition: and
-
     matchers:
       - type: word
         words:
-          - "user"
-          - "token"
-          - "expiry"
+          - '"user":'
+          - '"token":'
+          - '"expiry":'
         condition: and
 
       - type: status
