Added missing conditions + matcher update

--- a/default-logins/apollo/apollo-default-login.yaml
+++ b/default-logins/apollo/apollo-default-login.yaml
@@ -33,6 +33,7 @@ requests:
 
     cookie-reuse: true
     req-condition: true
+    matchers-condition: and
     matchers:
       - type: word
         part: body_2
