--- a/exposed-panels/kentico-login.yaml
+++ b/exposed-panels/kentico-login.yaml
@@ -10,18 +10,12 @@ info:
 requests:
   - method: GET
     path:
-      - "{{BaseURL}}/Admin/CMSAdministration.aspx"
       - "{{BaseURL}}/CMSPages/logon.aspx"
 
-    stop-at-first-match: true
-    matchers-condition: or
+    redirects: true
+    max-redirects: 2
+    matchers-condition: and
     matchers:
-      - type: dsl
-        dsl:
-          - "status_code==302"
-          - "contains(tolower(body), 'cmspages/logon.aspx')"
-        condition: and
-
       - type: dsl
         dsl:
           - "status_code==200"
