Avoid false positives

--- a/default-logins/apollo/apollo-default-login.yaml
+++ b/default-logins/apollo/apollo-default-login.yaml
@@ -45,3 +45,11 @@ requests:
       - type: status
         status:
           - 200
+
+      - type: word
+        part: body_1
+        condition: or
+        negative: true
+        words:
+          - "404"
+          - "Not Found"
