--- a/default-logins/apollo/apollo-default-login.yaml
+++ b/default-logins/apollo/apollo-default-login.yaml
@@ -47,9 +47,6 @@ requests:
           - 200
 
       - type: word
-        part: body_1
-        condition: or
-        negative: true
+        part: header
         words:
-          - "404"
-          - "Not Found"
+          - "application/json"
