--- a/technologies/jboss-detect.yaml
+++ b/technologies/jboss-detect.yaml
@@ -2,7 +2,7 @@ id: jboss-detect
 
 info:
   name: JBoss detected
-  author: daffainfo
+  author: daffainfo,idealphase
   severity: info
   tags: tech,jboss
 
@@ -24,3 +24,10 @@ requests:
       - type: status
         status:
           - 200
+
+    extractors:
+      - type: regex
+        group: 1
+        part: body
+        regex:
+          - '<h1>Welcome to (.+)<\/h1>'
