--- a/technologies/jboss-detect.yaml
+++ b/technologies/jboss-detect.yaml
@@ -11,19 +11,16 @@ requests:
     path:
       - "{{BaseURL}}"
 
-    matchers-condition: and
     matchers:
       - type: word
         part: body
         words:
-          - "<title>Welcome to JBoss AS</title>"
-          - "<title>Welcome to JBoss Application Server"
           - "JBoss EAP 7"
-        condition: or
 
-      - type: status
-        status:
-          - 200
+      - type: regex
+        part: body
+        regex:
+          - '<title>Welcome to JBoss(.*)</title>'
 
     extractors:
       - type: regex
